--- a/index.html
+++ b/index.html
@@ -19,19 +19,23 @@
                 padding: 0;
                 margin: 0;
                 text-align: center;
-                color: black;
             }
 
             h1 {
                 font-size: 5vh;
-                margin-top:20vh;
-                margin-bottom:10vh;
+                margin-top: 20vh;
+                margin-bottom: 4vh;
+            }
+
+            h2 {
+                font-size: 4vh;
+                margin-bottom:7vh;                
             }
 
             li {
-                display: block;
                 font-size: 4vh;
                 margin: 3vh;
+                display: block;
             }
 
             a {
@@ -45,6 +49,7 @@
     </head>
     <body>
         <h1>Tom Dane</h1>
+        <h2>Software Engineer</h2>
         <ul>
             <li><a href="https://github.com/thomasdane">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/tom-dane-b179ab3b/">LinkedIn</a></li>
