--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127585061-1"></script>
+        
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-127585061-1');
+        </script>
+
         <meta charset="utf-8">
         <title>Tom Dane</title>
         <link rel="icon" type="image/png" href="https://s3-us-west-1.amazonaws.com/tom-dane/favicon.ico">
+        
         <style>
             * {
                 padding: 0;
