--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         </script>
 
         <meta charset="utf-8">
+        <meta name="Description" content="Personal website of software engineer Tom Dane with resume, linkedin, and github">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         <title>Tom Dane</title>
         <link rel="icon" type="image/png" href="https://s3-us-west-1.amazonaws.com/tom-dane/favicon.ico">
-        
+
         <style>
             * {
                 padding: 0;
