--- a/index.html
+++ b/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Tom Dane</title>
-    <style>
-        * {
-            height:100%;
-        }
-        h1 {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 4vh;
-        }
-    </style>
-  </head>
-  <body>
-    <div>
-        <h1>hello world</h1>
-    </div>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>Tom Dane</title>
+        <style>
+            * {
+                padding: 0;
+                margin: 0;
+                text-align: center;
+                color: black;
+            }
+
+            h1 {
+                font-size: 5vh;
+                margin-top:20vh;
+                margin-bottom:10vh;
+            }
+
+            li {
+                display: block;
+                font-size: 4vh;
+                margin: 3vh;
+            }
+
+            a {
+                text-decoration: none;
+            }
+
+            a:hover {
+                text-decoration: underline;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Tom Dane</h1>
+        <ul>
+            <li><a href="https://github.com/thomasdane">Github</a></li>
+            <li><a href="https://www.linkedin.com/in/tom-dane-b179ab3b/">LinkedIn</a></li>
+            <li><a href="https://www.resumonk.com/tom-dane">Resume</a></li>
+        </ul>
+    </body>
 </html>
