--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         </script>
 
         <meta charset="utf-8">
-        <meta name="Description" content="Personal website of software engineer Tom Dane with resume, linkedin, and github">
+        <meta name="Description" content="Software engineer Tom Dane contact information">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Tom Dane</title>
-        <link rel="icon" type="image/png" href="https://s3-us-west-1.amazonaws.com/tom-dane/favicon.ico">
-	<link rel="canonical" href="https://tomdane.com"/>
+        <title>Personal Website | Tom Dane</title>
+        <link rel="icon" type="image/png" href="https://tomdane.com/favicon.ico">
+	    <link rel="canonical" href="https://tomdane.com"/>
 	
         <style>
             * {
@@ -58,6 +58,7 @@
             <li><a href="https://github.com/thomasdane">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/thomasdane/">LinkedIn</a></li>
             <li><a href="https://www.resumonk.com/tom-dane">Resume</a></li>
+            <li><a href="https://twitter.com/thomdane">Twitter</a></li>
         </ul>
     </body>
 </html>
