--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         </script>
 
         <meta charset="utf-8">
-        <meta name="Description" content="Software engineer Tom Dane contact information">
+        <meta name="Description" content="Contact information for Tom Dane Software Engineer">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Personal Website | Tom Dane</title>
+        <title>Hello Tom Dane</title>
         <link rel="icon" type="image/png" href="https://tomdane.com/favicon.ico">
 	    <link rel="canonical" href="https://tomdane.com"/>
 	
