--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
                 margin: 0;
                 text-align: center;
                 background-color: black;
+                color: green;
             }
 
             h1 {
                 font-size: 5vh;
                 margin-top: 20vh;
                 margin-bottom: 4vh;
-                color: white;
             }
 
             h2 {
                 font-size: 4vh;
                 margin-bottom:7vh;  
-                color: white              
             }
 
             li {
