--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <meta name="Description" content="Contact information for Tom Dane Software Engineer">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Hello Tom Dane</title>
+        <title>Tom Dane</title>
         <link rel="icon" type="image/png" href="https://tomdane.com/favicon.ico">
 	    <link rel="canonical" href="https://tomdane.com"/>
 	
