Make site black

--- a/index.html
+++ b/index.html
@@ -23,17 +23,20 @@
                 padding: 0;
                 margin: 0;
                 text-align: center;
+                background-color: black;
             }
 
             h1 {
                 font-size: 5vh;
                 margin-top: 20vh;
                 margin-bottom: 4vh;
+                color: white;
             }
 
             h2 {
                 font-size: 4vh;
-                margin-bottom:7vh;                
+                margin-bottom:7vh;  
+                color: white              
             }
 
             li {
