Help search engines find correct url

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
         <title>Tom Dane</title>
         <link rel="icon" type="image/png" href="https://s3-us-west-1.amazonaws.com/tom-dane/favicon.ico">
-
+	<link rel="canonical" href="https://tomdane.com"/>
+	
         <style>
             * {
                 padding: 0;
