--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <body>
         <h1>Tom Dane</h1>
         <ul>
-            <li><a href="https://github.com/thomasdane">Github</a></li>
+            <li><a href="https://github.com/thomasdane">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/tom-dane-b179ab3b/">LinkedIn</a></li>
             <li><a href="https://www.resumonk.com/tom-dane">Resume</a></li>
         </ul>
