Update LinkedIn link

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <h2>Software Engineer</h2>
         <ul>
             <li><a href="https://github.com/thomasdane">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/tom-dane-b179ab3b/">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/thomasdane/">LinkedIn</a></li>
             <li><a href="https://www.resumonk.com/tom-dane">Resume</a></li>
         </ul>
     </body>
