--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Tom Dane</title>
+        <link rel="icon" type="image/png" href="https://s3-us-west-1.amazonaws.com/tom-dane/favicon.ico">
         <style>
             * {
                 padding: 0;
