Fix resume link and return to white

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
                 padding: 0;
                 margin: 0;
                 text-align: center;
-                background-color: black;
-                color: green;
             }
 
             h1 {
@@ -59,7 +57,7 @@
         <ul>
             <li><a href="https://github.com/thomasdane">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/thomasdane/">LinkedIn</a></li>
-            <li><a href="https://www.resumonk.com/tom-dane">Resume</a></li>
+            <li><a href="https://www.resumonk.com/tomdane">Resume</a></li>
         </ul>
     </body>
 </html>
