--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
         <h1>Tom Dane</h1>
         <h2>Software Engineer</h2>
         <ul>
-            <li><a href="https://github.com/thomasdane">GitHub</a></li>
             <li><a href="https://www.linkedin.com/in/thomasdane/">LinkedIn</a></li>
             <li><a href="https://www.resumonk.com/tomdane">Resume</a></li>
+            <li><a href="./blog">Blog</a></li>
+
         </ul>
     </body>
 </html>
