--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
     <head>
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127585061-1"></script>
         
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-VTYETNE20Y"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'UA-127585061-1');
-        </script>
+
+            gtag('config', 'G-VTYETNE20Y');
+            </script>
 
         <meta charset="utf-8">
         <meta name="Description" content="Contact information for Tom Dane Software Engineer">
