--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <ul>
             <li><a href="https://www.linkedin.com/in/thomasdane/">LinkedIn</a></li>
             <li><a href="https://www.resumonk.com/tomdane">Resume</a></li>
-            <li><a href="./blog">Blog</a></li>
+            <li><a href="./blog.html">Blog</a></li>
 
         </ul>
     </body>
