--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 
 <div class="container">
     <ul>
-        <li><a href="/blog/interviews">Interviews</a></li>
+        <li><a href="/blog/interviews.html">Interviews</a></li>
     </ul>
 </div>    
     
