--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             gtag('js', new Date());
 
             gtag('config', 'G-VTYETNE20Y');
-            </script>
+        </script>
 
         <meta charset="utf-8">
         <meta name="Description" content="Contact information for Tom Dane Software Engineer">
@@ -60,8 +60,7 @@
         <ul>
             <li><a href="https://www.linkedin.com/in/thomasdane/">LinkedIn</a></li>
             <li><a href="https://www.resumonk.com/tomdane">Resume</a></li>
-            <li><a href="./blog.html">Blog</a></li>
-
+            <li><a href="https://github.com/thomasdane">GitHub</a></li>
         </ul>
     </body>
 </html>
